# paper-digest

./: CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: action-state-sync.yml  backfill-archive-history.yml  community-triage.yml  daily-digest.yml  dependency-review.yml  docs-check-pr-comment.yml  label-sync.yml  post-release-follow-up.yml  pr-hygiene.yml  quarterly-maintainer-review.yml  release.yml  reusable-python-checks.yml  workflow-lint.yml
docs/: branch-protection-policy.md  config-recipes.md  maintainer-guide.md  operations-history.md  repository-settings-checklist.md  review-policy.md  ruleset-policy.md
examples/: feishu-lm-arxiv.toml
paper_digest/: archive_site.py  arxiv_client.py  delivery.py
tests/: test_archive_site.py  test_arxiv_client.py  test_config_examples.py  test_delivery.py  test_delivery_additional.py  test_docs_check_pr_comment_workflow.py  test_repository_settings_policy.py  test_reusable_python_checks_workflow.py  test_workflow_contract_suite.py
tools/: repository_settings_policy.py
